--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ header .icons .tienda{
   color: #333;
   font-size: 1.5rem;
   margin-bottom: 24px;
-  text-align: justify;
+  text-align: center;
 }
 
 .info-button {
