--- a/style.css
+++ b/style.css
@@ -269,12 +269,15 @@ header .icons .tienda{
 /* Media Query para dispositivos con un ancho máximo de 768px (por ejemplo, dispositivos móviles) */
 @media screen and (max-width: 900px) {
 
-  body {
+  main {
     display: flex;
     flex-direction: column;
     align-items: center; /* Centra el contenido horizontalmente */
+    width: 100%; /* Ocupa todo el ancho disponible */
+    max-width: 100%; /* Establece el máximo ancho disponible */
+    padding-left: 50px;
   }
-  header, main {
+  header {
     width: 100%; /* Ocupa todo el ancho disponible */
     max-width: 100%; /* Establece el máximo ancho disponible */
   }
